tests/ui/async-await/in-trait/async-recursive-generic.stderr
error[E0733]: recursion in an async fn requires boxing
  --> $DIR/async-recursive-generic.rs:8:5
   |
LL |     async fn foo_recursive(&self, n: usize) -> T {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0733`.
